--- a/application.properties
+++ b/application.properties
@@ -1,5 +1,14 @@
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.username=root
-spring.datasource.password=2380220
-spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.datasource.username=root
+#spring.datasource.password=2380220
+#spring.jpa.show-sql=true
+#spring.jpa.hibernate.ddl-auto=update
+
+
+# Eureka Instance Configuration
+eureka.instance.prefer-ip-address=true
+
+# Eureka Client Configuration
+eureka.client.fetch-registry=true
+eureka.client.register-with-eureka=true
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
