--- a/application.properties
+++ b/application.properties
@@ -1,8 +1,8 @@
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#spring.datasource.username=root
-#spring.datasource.password=2380220
-#spring.jpa.show-sql=true
-#spring.jpa.hibernate.ddl-auto=update
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.username=root
+spring.datasource.password=2380220
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
 
 
 # Eureka Instance Configuration
