--- a/application.properties
+++ b/application.properties
@@ -4,11 +4,9 @@ spring.datasource.password=2380220
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 
-
-# Eureka Instance Configuration
-eureka.instance.prefer-ip-address=true
-
-# Eureka Client Configuration
-eureka.client.fetch-registry=true
-eureka.client.register-with-eureka=true
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
+spring.jpa.hibernate.ddl-auto=update
+eureka.client.serviceUrl.defaultZone  = http://localhost:8761/eureka
+eureka.client.instance.preferIpAddress = true
+eureka.instance.hostname=localhost
