--- a/application.properties
+++ b/application.properties
@@ -1,12 +1,16 @@
+
+
+
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=2380220
 spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
-spring.jpa.hibernate.ddl-auto=update
-eureka.client.serviceUrl.defaultZone  = http://localhost:8761/eureka
-eureka.client.instance.preferIpAddress = true
+# Eureka Instance Configuration
+
+# Eureka Client Configuration
+eureka.client.instance.perferIpAddress=true
 eureka.instance.hostname=localhost
